tests/baselines/reference/numericIndexerConstraint5.errors.txt
tests/cases/compiler/numericIndexerConstraint5.ts(2,5): error TS2322: Type '{ name: 文字; 0: Date; }' is not assignable to type '{ [name: 数字]: 文字; }'.
  Property '0' is incompatible with index signature.
    Type 'Date' is not assignable to type '文字'.


==== tests/cases/compiler/numericIndexerConstraint5.ts (1 errors) ====
    var x = { name: "x", 0: new Date() };
    var z: { [name: number]: string } = x;
        ~
!!! error TS2322: Type '{ name: 文字; 0: Date; }' is not assignable to type '{ [name: 数字]: 文字; }'.
!!! error TS2322:   Property '0' is incompatible with index signature.
!!! error TS2322:     Type 'Date' is not assignable to type '文字'.